--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 
 
 .is-sidebar-menu {
-    padding: 2.5rem;
+    /* padding: 2.5rem; */
     background: #4a4a4a;
   }
   .is-sidebar-menu li a {
@@ -24,3 +24,8 @@
     background: #dbdbdb;
   }
   
+  #menu {
+    margin: 0px;
+    padding: 0px;
+  }
+
